[package]
name = "pallet-bridge-grandpa"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
finality-grandpa = { version = "0.14.1", default-features = false }
log = { version = "0.4.14", default-features = false }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true }

# Bridge Dependencies

bp-runtime = { path = "../../primitives/runtime", default-features = false }
bp-header-chain = { path = "../../primitives/header-chain", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "04ee46218451502fb5605106fca1080cccdc80cb" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "04ee46218451502fb5605106fca1080cccdc80cb" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "04ee46218451502fb5605106fca1080cccdc80cb" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "04ee46218451502fb5605106fca1080cccdc80cb" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "04ee46218451502fb5605106fca1080cccdc80cb" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "04ee46218451502fb5605106fca1080cccdc80cb" }

# Optional Benchmarking Dependencies
bp-test-utils = { path = "../../primitives/test-utils", default-features = false, optional = true }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , rev = "04ee46218451502fb5605106fca1080cccdc80cb" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", rev = "04ee46218451502fb5605106fca1080cccdc80cb" }

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-runtime/std",
	"bp-test-utils/std",
	"codec/std",
	"finality-grandpa/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"num-traits/std",
	"serde",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
runtime-benchmarks = [
	"bp-test-utils",
	"frame-benchmarking",
]
