[package]
name = "slot-range-helper"
version = "0.9.5"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
paste = "1.0"
enumn = "0.1.3"
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false , rev = "04ee46218451502fb5605106fca1080cccdc80cb" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "04ee46218451502fb5605106fca1080cccdc80cb" }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"parity-scale-codec/std",
	"sp-runtime/std",
]
